tests/ui/higher-ranked/trait-bounds/issue-59311.stderr
error: higher-ranked subtype error
  --> $DIR/issue-59311.rs:17:5
   |
LL |     v.t(|| {});
   |     ^^^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/issue-59311.rs:17:5
   |
LL |     v.t(|| {});
   |     ^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: higher-ranked subtype error
  --> $DIR/issue-59311.rs:17:9
   |
LL |     v.t(|| {});
   |         ^^^^^

error: aborting due to 3 previous errors

